fix(checkbox, radio-button): spacing between entries

--- a/packages/elvis/src/components/form/checkbox.scss
+++ b/packages/elvis/src/components/form/checkbox.scss
@@ -26,7 +26,7 @@ $checkbox-mark-border-checked: 1px solid var(--e-checkbox-border-checked-color);
   text-align: left;
 
   &:not(:last-child) {
-    margin-bottom: 12px;
+    margin-bottom: 8px;
   }
 
   &__mark {
